login + converted pages

--- a/rebar.config
+++ b/rebar.config
@@ -4,5 +4,6 @@
 {deps, [
     {n2o,           ".*", {git, "git://github.com/5HT/n2o.git", "HEAD"}},
     {kvs,           ".*", {git, "git://github.com/synrc/kvs.git", "HEAD"}},
-    {eper,          ".*", {git, "git://github.com/massemanet/eper.git", "HEAD"}}
+    {eper,          ".*", {git, "git://github.com/massemanet/eper.git", "HEAD"}},
+    {oauth,         ".*", {git, "git://github.com/doxtop/erlang-oauth.git", "master"}}
 ]}.
