--- a/rels/web/files/sys.config
+++ b/rels/web/files/sys.config
@@ -3,6 +3,14 @@
  {n2o, [{route,routes}]},
  {mnesia, [{dir, "data"}]},
  {nsx_idgen, [{game_pool,5000000}]},
+ {web,
+     [{http_address, "http://igratch.synrc.com"},
+      {fb_id, "212644015549957"},
+      {fb_secret, []},
+      {tw_consumer_key, "sDF860hmgCKRfOCMFYdtmw"},
+      {tw_consumer_secret, "JVaRJl941kD777piDiWm6Qcr9vEYwzhl228irXK8"},
+      {gplus_client_id, "550446572750.apps.googleusercontent.com"},
+      {gplus_cookiepolicy, "http://synrc.com"}]},
  {sasl,
     [{sasl_error_logger, {file,"log/sasl-error.log"}},
     {errlog_type, error},
