--- a/rels/web/reltool.config
+++ b/rels/web/reltool.config
@@ -26,6 +26,8 @@
          cowboy,
          crypto,
          lager,
+         oauth,
+         xmerl,
          web
         ]},
        {rel, "start_clean", "",
@@ -41,7 +43,7 @@
        {excl_sys_filters, ["^bin/.*", "^erts.*/bin/(dialyzer|typer)",
                            "^erts.*/(doc|info|include|lib|man|src)"]},
        {excl_app_filters, ["\.gitignore"]},
-%       {app, hipe, [{mod_cond, app}, {incl_cond, exclude}]},
+       {app, hipe, [{mod_cond, app}, {incl_cond, exclude}]},
        {app, web, [{mod_cond, app}, {incl_cond, include}]}
       ]}.
 
