--- a/rels/web/reltool.config
+++ b/rels/web/reltool.config
@@ -44,6 +44,7 @@
                            "^erts.*/(doc|info|include|lib|man|src)"]},
        {excl_app_filters, ["\.gitignore"]},
 %       {app, hipe, [{mod_cond, app}, {incl_cond, exclude}]},
+       {app, appmon, [{mod_cond, app}, {incl_cond, exclude}]},
        {app, web, [{mod_cond, app}, {incl_cond, include}]}
       ]}.
 
