use feed_server

--- a/rebar.config
+++ b/rebar.config
@@ -2,12 +2,11 @@
 {lib_dirs,["apps"]}.
 {deps_dir,["deps"]}.
 {deps, [
-    {n2o,           ".*", {git, "git://github.com/5HT/n2o.git", "HEAD"}},
-    {n2o_scripts,   ".*", {git, "git://github.com/voxoz/n2o_scripts", "HEAD"}},
-    {kvs,           ".*", {git, "git://github.com/synrc/kvs.git", "HEAD"}},
-    {mimetypes,     ".*", {git, "git://github.com/doxtop/mimetypes.git",   {tag, "HEAD"}}},
-    {gproc,         ".*", {git, "git://github.com/uwiger/gproc.git",          "HEAD"}},
+    {feed_server,   ".*", {git, "git://github.com/doxtop/feed_server.git",  "HEAD"}},
+    {n2o,           ".*", {git, "git://github.com/5HT/n2o.git",             "HEAD"}},
+    {n2o_scripts,   ".*", {git, "git://github.com/voxoz/n2o_scripts",       "HEAD"}},
     {oauth,         ".*", {git, "git://github.com/doxtop/erlang-oauth.git", "master"}},
-    {sync,          ".*", {git, "git://github.com/doxtop/sync",            "HEAD"}},
-    {lager,         ".*", {git, "git://github.com/basho/lager.git",        {tag,"1.2.2"}}}
+    {sync,          ".*", {git, "git://github.com/doxtop/sync",             "HEAD"}},
+    {lager,         ".*", {git, "git://github.com/basho/lager.git",         {tag,"1.2.2"}}},
+    {eper,          ".*", {git, "git://github.com/massemanet/eper.git",     "HEAD"}}
 ]}.
