--- a/rels/web/reltool.config
+++ b/rels/web/reltool.config
@@ -28,6 +28,7 @@
          lager,
          oauth,
          xmerl,
+         feed_server,
          web
         ]},
        {rel, "start_clean", "",
