--- a/rels/web/files/sys.config
+++ b/rels/web/files/sys.config
@@ -22,7 +22,8 @@
       {pass_init_db,true},
       {sync_nodes,false},
       {nodes,[]},
-      {dba,nsm_riak},
+      {dba, store_mnesia},
+      {schema, []},
       {game_srv_node,'game@rigdzin.cc'},
       {web_srv_node,'web@rigdzin.cc'},
       {riak_srv_node,'n2o@127.0.0.1'}]},
