--- a/rels/web/files/sys.config
+++ b/rels/web/files/sys.config
@@ -23,7 +23,7 @@
       {sync_nodes,false},
       {nodes,[]},
       {dba, store_mnesia},
-      {schema, []},
+      {schema, [kvs_user,kvs_acl, kvs_account, kvs_payment, kvs_membership, kvs_meeting, kvs_group, kvs_feed, kvs_product]},
       {game_srv_node,'game@rigdzin.cc'},
       {web_srv_node,'web@rigdzin.cc'},
       {riak_srv_node,'n2o@127.0.0.1'}]},
