--- a/rels/web/files/sys.config
+++ b/rels/web/files/sys.config
@@ -1,6 +1,6 @@
 [
  {sync, [{sync_mode, nitrogen}]},
- {n2o, [{route,routes}, {port, 8001}]},
+ {n2o, [{route,routes}, {port, 8001}, {login, "/profile"}]},
  {mnesia, [{dir, "data"}]},
  {nsx_idgen, [{game_pool,5000000}]},
  {web,
