--- a/rels/web/reltool.config
+++ b/rels/web/reltool.config
@@ -29,6 +29,7 @@
          oauth,
          xmerl,
          feed_server,
+         avz,
          web
         ]},
        {rel, "start_clean", "",
