--- a/rebar.config
+++ b/rebar.config
@@ -8,5 +8,6 @@
     {oauth,         ".*", {git, "git://github.com/doxtop/erlang-oauth.git", "master"}},
     {sync,          ".*", {git, "git://github.com/doxtop/sync",             "HEAD"}},
     {lager,         ".*", {git, "git://github.com/basho/lager.git",         {tag,"1.2.2"}}},
-    {eper,          ".*", {git, "git://github.com/massemanet/eper.git",     "HEAD"}}
+    {eper,          ".*", {git, "git://github.com/massemanet/eper.git",     "HEAD"}},
+    {avz,           ".*", {git, "git://github.com/voxoz/avz.git",           "HEAD"}}
 ]}.
