change repo path

--- a/rebar.config
+++ b/rebar.config
@@ -9,5 +9,5 @@
     {sync,          ".*", {git, "git://github.com/doxtop/sync",             "HEAD"}},
     {lager,         ".*", {git, "git://github.com/basho/lager.git",         {tag,"1.2.2"}}},
     {eper,          ".*", {git, "git://github.com/massemanet/eper.git",     "HEAD"}},
-    {avz,           ".*", {git, "git://github.com/voxoz/avz.git",           "HEAD"}}
+    {avz,           ".*", {git, "git://github.com/synrc/avz.git",           "HEAD"}}
 ]}.
