--- a/rebar.config
+++ b/rebar.config
@@ -4,7 +4,7 @@
 {deps, [
     {feed_server,   ".*", {git, "git://github.com/doxtop/feed_server.git",  "HEAD"}},
     {n2o,           ".*", {git, "git://github.com/5HT/n2o.git",             "HEAD"}},
-    {n2o_scripts,   ".*", {git, "git://github.com/voxoz/n2o_scripts",       "HEAD"}},
+    {n2o_scripts,   ".*", {git, "git://github.com/synrc/n2o_scripts",       "HEAD"}},
     {oauth,         ".*", {git, "git://github.com/doxtop/erlang-oauth.git", "master"}},
     {sync,          ".*", {git, "git://github.com/doxtop/sync",             "HEAD"}},
     {lager,         ".*", {git, "git://github.com/basho/lager.git",         {tag,"1.2.2"}}},
