--- a/apps/web/rebar.config
+++ b/apps/web/rebar.config
@@ -1,5 +1,8 @@
 {deps_dir, ["../../deps"]}.
-{deps, [n2o,cowboy,mimetypes,{erlydtl,".*",{git,"git://github.com/evanmiller/erlydtl.git","HEAD"}}]}.
+{deps, 
+    [n2o,cowboy,mimetypes,
+    {shen,".*",{git,"git://github.com/5HT/shen.git","HEAD"}},
+    {erlydtl,".*",{git,"git://github.com/voxoz/erlydtl.git","HEAD"}}]}.
 {erlydtl_opts, [
     {doc_root,   "priv/templates"},
     {out_dir,    "ebin"},
