--- a/apps/web/rebar.config
+++ b/apps/web/rebar.config
@@ -2,7 +2,7 @@
 {deps, 
     [n2o,cowboy,mimetypes,
     {shen,".*",{git,"git://github.com/5HT/shen.git","HEAD"}},
-    {erlydtl,".*",{git,"git://github.com/voxoz/erlydtl.git","HEAD"}}]}.
+    {erlydtl,".*",{git,"git://github.com/evanmiller/erlydtl.git","HEAD"}}]}.
 {erlydtl_opts, [
     {doc_root,   "priv/templates"},
     {out_dir,    "ebin"},
