feed_ui cleanup

--- a/rebar.config
+++ b/rebar.config
@@ -3,6 +3,7 @@
 {deps_dir,["deps"]}.
 {deps, [
     {feed_server,   ".*", {git, "git://github.com/doxtop/feed_server.git",  "HEAD"}},
+    {feed_ui,       ".*", {git, "git://github.com/doxtop/feed_ui.git",      "HEAD"}},
     {n2o,           ".*", {git, "git://github.com/5HT/n2o.git",             "HEAD"}},
     {n2o_scripts,   ".*", {git, "git://github.com/synrc/n2o_scripts",       "HEAD"}},
     {oauth,         ".*", {git, "git://github.com/doxtop/erlang-oauth.git", "master"}},
