--- a/rebar.config
+++ b/rebar.config
@@ -2,10 +2,9 @@
 {lib_dirs,["apps"]}.
 {deps_dir,["deps"]}.
 {deps, [
-    {feed_server,   ".*", {git, "git://github.com/doxtop/feed_server.git",  "HEAD"}},
-    {feed_ui,       ".*", {git, "git://github.com/doxtop/feed_ui.git",      "HEAD"}},
     {n2o,           ".*", {git, "git://github.com/5HT/n2o.git",             "HEAD"}},
     {n2o_scripts,   ".*", {git, "git://github.com/synrc/n2o_scripts",       "HEAD"}},
+    {feed_server,   ".*", {git, "git://github.com/synrc/feeds.git",         "master"}},
     {oauth,         ".*", {git, "git://github.com/doxtop/erlang-oauth.git", "master"}},
     {sync,          ".*", {git, "git://github.com/doxtop/sync",             "HEAD"}},
     {lager,         ".*", {git, "git://github.com/basho/lager.git",         {tag,"1.2.2"}}},
