active. update deps

--- a/rebar.config
+++ b/rebar.config
@@ -3,11 +3,13 @@
 {deps_dir,["deps"]}.
 {deps, [
     {n2o,           ".*", {git, "git://github.com/5HT/n2o.git",             "HEAD"}},
-    {n2o_scripts,   ".*", {git, "git://github.com/synrc/n2o_scripts",       "HEAD"}},
+    {n2o_scripts,   ".*", {git, "git://github.com/synrc/n2o_scripts",       {tag,"0.11.0"}}},
     {feed_server,   ".*", {git, "git://github.com/synrc/feeds.git",         "master"}},
+    {bootstrap,     ".*", {git, "git://github.com/twbs/bootstrap.git",          {tag,"v2.3.2"}}, [raw]},
+    {'font-awesome',".*", {git, "git://github.com/FortAwesome/Font-Awesome.git",{tag,"v3.2.1"}}, [raw]},
+    {'less.js',     ".*", {git, "git://github.com/less/less.js.git",            {tag,"v1.5.0"}}, [raw]},
     {oauth,         ".*", {git, "git://github.com/doxtop/erlang-oauth.git", "master"}},
-    {sync,          ".*", {git, "git://github.com/doxtop/sync",             "HEAD"}},
+    {active,        ".*", {git, "git://github.com/proger/active",               "HEAD"}},
     {lager,         ".*", {git, "git://github.com/basho/lager.git",         {tag,"1.2.2"}}},
-    {eper,          ".*", {git, "git://github.com/massemanet/eper.git",     "HEAD"}},
     {avz,           ".*", {git, "git://github.com/synrc/avz.git",           "HEAD"}}
 ]}.
