--- a/rebar.config
+++ b/rebar.config
@@ -9,7 +9,7 @@
     {'font-awesome',".*", {git, "git://github.com/FortAwesome/Font-Awesome.git",{tag,"v3.2.1"}}, [raw]},
     {'less.js',     ".*", {git, "git://github.com/less/less.js.git",            {tag,"v1.5.0"}}, [raw]},
     {oauth,         ".*", {git, "git://github.com/doxtop/erlang-oauth.git", "master"}},
-    {active,        ".*", {git, "git://github.com/proger/active",               "HEAD"}},
+    {active,        ".*", {git, "git://github.com/synrc/active",               "HEAD"}},
     {lager,         ".*", {git, "git://github.com/basho/lager.git",         {tag,"1.2.2"}}},
     {avz,           ".*", {git, "git://github.com/synrc/avz.git",           "HEAD"}}
 ]}.
