--- a/rebar.config
+++ b/rebar.config
@@ -4,7 +4,7 @@
 {deps, [
     {n2o,           ".*", {git, "git://github.com/5HT/n2o.git",             "HEAD"}},
     {n2o_scripts,   ".*", {git, "git://github.com/synrc/n2o_scripts",       {tag,"0.11.0"}}},
-    {feed_server,   ".*", {git, "git://github.com/synrc/feeds.git",         "master"}},
+    {feed_server,   ".*", {git, "git://github.com/synrc/feeds.git",         {tag, "1.0"}}},
     {bootstrap,     ".*", {git, "git://github.com/twbs/bootstrap.git",          {tag,"v2.3.2"}}, [raw]},
     {'font-awesome',".*", {git, "git://github.com/FortAwesome/Font-Awesome.git",{tag,"v3.2.1"}}, [raw]},
     {'less.js',     ".*", {git, "git://github.com/less/less.js.git",            {tag,"v1.5.0"}}, [raw]},
